@@ -32,12 +32,8 @@ EXEC_PROGRAM( nnfw-config ARGS --cflags OUTPUT_VARIABLE NNFW_CFLAGS )
 QT4_WRAP_CPP( FLEXLIB_SRCS ${FLEXLIB_HDRS} )
 ADD_LIBRARY( flexynet SHARED ${FLEXLIB_SRCS} )
 SET_TARGET_PROPERTIES( flexynet PROPERTIES COMPILE_FLAGS "${NNFW_CFLAGS}" )
-IF (APPLE)
-	MESSAGE( "-- Setting compiler for MAC OS X" )
-	SET_TARGET_PROPERTIES( flexynet PROPERTIES LINK_FLAGS "${NNFW_LIBS} -framework QtCore -framework QtGui -framework QtOpenGL -framework QtXml -F/usr/local/qt4/lib" )		
-ELSE (APPLE)
-	SET_TARGET_PROPERTIES( flexynet PROPERTIES LINK_FLAGS "${NNFW_LIBS}" )
-ENDIF (APPLE)
+SET_TARGET_PROPERTIES( flexynet PROPERTIES LINK_FLAGS "${NNFW_LIBS}" )
+TARGET_LINK_LIBRARIES( flexynet ${QT_LIBRARIES} )
 
 ####################### FLEYNET APPLICATION ############
 ### RESOURCES
@@ -48,22 +44,7 @@ QT4_WRAP_CPP( FLEXBIN_SRCS ${FLEXBIN_HDRS} )
 ADD_EXECUTABLE( flexbin ${FLEXBIN_SRCS} )
 SET_TARGET_PROPERTIES( flexbin PROPERTIES COMPILE_FLAGS " ${NNFW_CFLAGS} -I${FLEXYNET_SOURCE_DIR}/include/bin" )
 SET_TARGET_PROPERTIES( flexbin PROPERTIES LINK_FLAGS "${NNFW_LIBS}" )
-IF (WIN32)
-	TARGET_LINK_LIBRARIES( flexbin "QtOpenGL4" )
-	TARGET_LINK_LIBRARIES( flexbin "QtXml4" )
-	TARGET_LINK_LIBRARIES( flexbin "QtGui4" )
-	TARGET_LINK_LIBRARIES( flexbin "QtCore4" )
-ELSE (WIN32)
-	IF (APPLE)
-		MESSAGE( "-- Setting compiler for MAC OS X" )
-		SET_TARGET_PROPERTIES( flexbin PROPERTIES LINK_FLAGS "${NNFW_LIBS} -framework QtCore -framework QtGui -framework QtOpenGL -framework QtXml -F/usr/local/qt4/lib" )		
-	ELSE (APPLE)
-		TARGET_LINK_LIBRARIES( flexbin "QtOpenGL" )
-		TARGET_LINK_LIBRARIES( flexbin "QtXml" )
-		TARGET_LINK_LIBRARIES( flexbin "QtGui" )
-		TARGET_LINK_LIBRARIES( flexbin "QtCore" )
-	ENDIF (APPLE)
-ENDIF (WIN32)
+TARGET_LINK_LIBRARIES( flexbin ${QT_LIBRARIES} )
 TARGET_LINK_LIBRARIES( flexbin "flexynet" )
 ADD_DEPENDENCIES( flexbin flexynet )
 
@@ -108,8 +89,3 @@ ENDIF (UNIX)
 IF( WIN32 AND NOT UNIX )
 	ADD_DEFINITIONS( -DFLEX_BUILDING_DLL )
 ENDIF( WIN32 AND NOT UNIX )
-
-### Setting Compiler minGW for Windows machines
-IF (MINGW)
-    SET_TARGET_PROPERTIES( nnfw PROPERTIES LINK_FLAGS "-LC:\\Qt\\4.2.3\\lib -Wl,--export-all-symbols -Wl,--add-stdcall-alias" )
-ENDIF (MINGW)
